# algomin-backend

./: .DONOTIGNORE_THIS_REMINDER.md  .gitignore  ARCHITECTURE.md  FIRST_STEPS.md  INSTALL.md  README.md  TODO.md  add_to_bashrc.sh  backend_tree_structure.txt  build.sh  config.py  delete_error_when_testing_test_smartwebsocket.txt  documentation.md  error.md  init_db.py  main.py  next.config.js  nixpacks.toml  package-lock.json  pyproject.toml  requirements.txt  scratch.py  server.py  setup.py  start.md  start_websocket.py  test_algomin.sh  tree_structure.txt  use-of-observer-pattern.md  web_socket_manager.py
 misc/: websocket_programming.py
Thing.egg-info/: PKG-INFO  SOURCES.txt
api/: routes.py
audio_tools/: html_to_audio_cli.py  html_to_audio_main.py  scraper.py
base/: README.md  pyproject.toml
base/src/base/: advanced_line_command.py  config.py  config.yml  config_loader.py  session.py  simple_line_command.py
base/src/base/observer/: __init__.py  alert.py  base_observer.py  database.py  ema.py  email.py  logger_observer.py  mongodaba.py  price_prediction.py  web_socket_base.py
bracket_order/: bracket_order_derivative_stock.py
brokers/: USAGE.md  WebSocketManager.py  abstract_websocket_client.py  angelone_order_client.py  angelone_smart_connect_client.py  angelone_trading_client.py  angelone_websocket_client.py  angelone_websocket_event_handler.py  base_trading_client.py  base_websocket.py  base_websocket_client.py  custom_angel_one_web_socket.py  order_client_factory.py  smart_connect_client.py  smart_event_handler.py  smart_websocket_client.py  websocket_client_factory.py  websocket_factory.py
clients/: smart_connect_client.py  websocket_client.py
config/: bootstrap.yaml  common.yaml
config_loader/: base_config_loader.py  bootstrap.yaml  broker_config_loader.py  common.yaml
core/: config_loader.py  errors.py  session.py  strategy_executor.py  strategy_loader.py  websocket_client.py
data/: bo_derivative_data.yaml  brokers.yaml  config.yml  strategies.yaml  strategies.yml
db/: database.py
frontend/: send_live_data_to_front_end.py
historical/: pyproject.toml
historical/src/historical/: ema_indicator_query.py
live/: README.md  pyproject.toml  pyproject.toml.old
live/src/data/: bo_derivative_data.yaml  bo_stock_data.yaml  common.yaml
live/src/live/: api_live.py  auto_authenticate.py  bracket_order_derivative.py  bracket_order_derivative_stock.py  cli_example_01.py  cli_example_multiple_commands_in_argparse.py  cli_websocket_only.py  ema.md  ema.py  fastapi-websocket-example.md  live_api.py  next-js-frontend.md  normal_order_derivative_stock.py  observer_live_api.py  order.py  real_time_ltp.py  simple_example.py  simple_example_01.py  simple_example_02.py  test_only_websocket.py  test_timestamp.py  using_smartwebsocketv2.py
live/src/live/bracket/: bracket_order_stock.py
loaders/: yaml_loader.py
normal_order/: normal_order_derivative_stock.py
observer/: chart.py  email.py  limit_order_trigger.py  mongodaba.py
orders/: limit_order.py  market_order.py  order_factory.py  stop_loss_order.py
results/: test_api_live.txt  test_candle_data_results.txt  test_candledata_to_dataframe
routes/: html_to_audio_api.py
sessions/: angelone_session.py
src/: __init__.py
strategy_loader/: yaml_strategy_loader.py
templates/: base.html  html_to_audio.html  index.html  strategy_form.html  strategy_list.html
tests/: conftest.py  test_advanced_line_command.py  test_api_routes.py  test_candle_data.py  test_config_loader.py  test_live_data.py  test_live_data_like_start_websocket.py  test_live_data_looking_like_start_websocket.py  test_loader_factory.py  test_observer_live_api.py  test_observer_smartwebsocketclient.py  test_only_observer.py  test_order_client.py  test_placeOrder.py  test_run_live_order.py  test_simple_line_command.py  test_smartwebsocket.py  test_websocket_manager.py
tools/: HTML_TO_AUDIO_README.md  html_to_audio.py  html_to_audio_cli.py  strategies.yml  strategy_loader.py  (+1 more)
(+65 files in other folders)
