[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "min"
version = "0.1.0"
description = "A brief description of your package"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Nishith Singhai", email = "singhai.nish@gmail.com" },
    { name = "Pravin Vhatkar", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.25.2",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "idna>=3.10",
    "logzero>=1.7.0",
    "pandas>=2.0.3",
    "pyotp>=2.9.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "six>=1.17.0",
    "smartapi-python>=1.5.4",
    "tabulate>=0.9.0",
    "tzdata>=2025.1",
    "urllib3>=2.3.0",
    "websocket-client>=1.6.4",
    "plotly>=6.0.0",
    "setuptools>=75.8.0"
]

[project.urls]
homepage = "https://yourprojecthomepage.com"
repository = "https://github.com/vhatkar/Algo_Test"
documentation = "https://yourprojectdocs.com"
