[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "historical"
version = "0.1.0"
description = "indicators"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ni Si", email = "singhai.nish@gmail.com" },
]
dependencies = [
    "base @ file:///home/sinhurry/Documents/GitHub/algomin/base"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["historical"]