[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "live"
version = "0.1.2"
description = "use smartwebsocket to get live data"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Ni Si", email = "singhai.nish@gmail.com" },
    { name = "Pravin Vhatkar", email = "vhatkar.automobiles@gmail.com"}
]
dependencies = [
    "base @ file:///home/nishith/Documents/GitHub/algomin/base"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["live"]


#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
#
#[project]
#name = "package_one"
#version = "0.1.0"
#description = "Independent package one"
#readme = "README.md"
#requires-python = ">=3.8"
#license = { text = "MIT" }
#authors = [{ name = "Your Name", email = "your.email@example.com" }]
#dependencies = [
#    "shared_module @ file://../shared_module"
#]
#
#[tool.setuptools.packages.find]
#where = ["src"]
#include = ["package_one"]
